# SoftwareDesign

./: .gitignore
LRUCache/: pom.xml
LRUCache/src/main/java/ru/imfo/peresadin/: LRUCache.java
LRUCache/src/test/java/: SimpleTest.java
hw10-clock/: hw10-clock.cabal  stack.yaml
hw10-clock/app/: Main.hs
hw10-clock/src/: Class.hs  ClockT.hs  EvStatT.hs  Inst.hs
hw10-clock/test/: Aux.hs  Spec.hs
hw4-happstack/: .gitignore  hw4-happstack.cabal
hw4-happstack/app/: AcidDAO.hs  Controller.hs  Main.hs  Model.hs
hw4-happstack/app/pages/: Index.hs  index.html
hw4-happstack/app/pages/css/: bootstrap.css  custom.css
hw4-happstack/app/pages/js/: bootstrap.js  handlebars-v3.0.3.js
hw4-happstack/src/: Model.hs
hw5-bridge/: list2.txt  list3.txt  matrix2.txt
hw5-bridge/src/: AwtDrawing.java  FxDrawing.java  Main.java
hw5-bridge/src/draw/: AwtDrawingApi.java  CircleDrawStrategy.java  DrawStrategy.java  DrawingApi.java  FxDrawingApi.java  Point.java
hw5-bridge/src/graph/: Edge.java  Graph.java  GraphAdjacencyMatrix.java  GraphEdgeList.java
hw6-visitor/: hw6-visitor.cabal
hw6-visitor/app/: Main.hs
hw6-visitor/src/: Expr.hs  Visitor.hs
hw7-aop/: pom.xml
hw7-aop/src/main/java/ru/ifmo/peresadin/: ContextConfiguration.java  Main.java
hw7-aop/src/main/java/ru/ifmo/peresadin/aspect/: Profile.java  ProfileAspect.java
hw7-aop/src/main/java/ru/ifmo/peresadin/test/: Fib.java  TwoFib.java
hw8-actors/: hw8-actors.cabal  stack.yaml
hw8-actors/app/: Main.hs  Options.hs  Web.hs
hw8-actors/app/pages/: index.html
hw8-actors/src/: Serve.hs  Types.hs
hw8-actors/src/Control/Concurrent/: Actor.hs
hw8-actors/stub/: Main.hs  Options.hs  Web.hs
twitter/: pom.xml
twitter/src/main/java/: Main.java  ResponseParserImpl.java  TweetStatisticImpl.java  TweetStreamerImpl.java  TwitterRequesterImpl.java
twitter/src/main/java/interfaces/: ResponseParser.java  TweetStatistic.java  TweetStreamer.java  TwitterRequester.java
twitter/src/main/java/model/: HashtagCounter.java  SearchMetadata.java  SearchResponse.java  Tweet.java
twitter/src/main/resources/: auth.txt  logback.xml
twitter/src/test/java/: TweetStatisticTest.java  TweetStreamerTest.java  TwitterParserTest.java
twitter/src/test/java/utils/: Utils.java
twitter/src/test/resources/: MoscowResponse_Page1.json  SpbResponse_Page1_Count30.json  SpbResponse_Page2_Count30.json
