name:                hw10-clock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hw10-clock#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Class
                     , EvStatT
                     , ClockT
  build-depends:       base >= 4.7 && < 5
                     , universum
                     , time-units
                     , time
                     , mtl
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf


executable hw10-clock-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw10-clock
  default-language:    Haskell2010

test-suite hw10-clock-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw10-clock
                     , hspec >= 2.4.2
                     , QuickCheck
                     , universum >= 0.2
  default-extensions:  NoImplicitPrelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pva701/hw10-clock
