name:                hw4-happstack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hw4-happstack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hw4-happstack-exe
  hs-source-dirs:      app, app/pages
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4-happstack
                     , happstack-server
                     , safecopy
                     , acid-state
                     , mtl
                     , containers
                     , aeson
                     , hashable
                     , time
                     , hsx2hs
                     , hsp
                     , text
                     , html
                     , hamlet
                     , shakespeare
                     , blaze-html
  other-modules:       AcidDAO
                     , Controller
                     , Model
                     , Index
  default-language:    Haskell2010

test-suite hw4-happstack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw4-happstack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw4-happstack
