name:                hw8-actors
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hw8-actors#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Serve
                     , Types
                     , Control.Concurrent.Actor
  build-depends:       base >= 4.7 && < 5
                     , universum
                     , mtl
                     , aeson
                     , wreq
                     , filepath >= 1.4
                     , containers
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf

executable hw8-actors-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Web
                     , Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw8-actors
                     , scotty
                     , aeson
                     , universum
                     , bytestring
                     , warp
                     , wai-extra >= 3.0
                     , wai-middleware-static
                     , optparse-simple
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable hw8-stub-exe
  hs-source-dirs:      stub
  main-is:             Main.hs
  other-modules:       Web
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw8-actors
                     , optparse-simple
                     , scotty
                     , aeson
                     , universum
                     , bytestring
                     , warp
                     , wai-extra >= 3.0
                     , unordered-containers >= 0.2
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite hw8-actors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw8-actors
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hw8-actors
